--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ body.san-t5 .panel {
       "Zatrzymałem się gwałtownie.",
       "„To nie może być przecież ona!” — pomyślałem przerażony.",
       "Postać zniknęła między drzewami, a ja ruszyłem za nią bezwiednie.",
-      "— Zaczekaj! — to co miało być krzykiem okazał się ledwie szeptem. Biegłem jednak dalej, zapominając o strachu i zmęczeniu.",
+      "— Zaczekaj! — to co miało być krzykiem okazało się ledwie szeptem. Biegłem jednak dalej, zapominając o strachu i zmęczeniu.",
       "Dotarłem na niewielką polanę. Czekała już na mnie. Stała tyłem, drobna i bezbronna.",
       "Powoli odwróciła się w moją stronę. Blada twarz, usta wykrzywione w grymasie, błękitne oczy pełne pogardy.",
       "Z cienia za jej plecami wyłoniła się wysoka, groteskowa istota, nieludzko chuda, z ramionami sięgającymi niemal do kolan.",
